fixed styles and overflow

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   background-color: #000 !important;
   color: #fff !important;
+  overflow-x: hidden;
 }
 
 h2 {
@@ -88,13 +89,13 @@ h2 {
   width: 100%;
 }
 
-.movie-detail h2 {
+.movie-detail h3 {
   position: absolute;
   left: 50px;
   bottom: 100px;
 }
 
-.movie-detail h3 {
+.movie-detail h4 {
   position: absolute;
   left: 50px;
   bottom: 25px;
@@ -111,10 +112,10 @@ h2 {
 
 .close {
   position: relative;
+  display: inline-block;
   width: 50px;
   height: 50px;
   overflow: hidden;
-  float: right;
 }
 
 .close::before {
