--- a/src/login/login-styles.css
+++ b/src/login/login-styles.css
@@ -17,6 +17,7 @@
 }
 
 #page-wrap {
+  color: black;
   position: relative;
   z-index: 2;
   width: 400px;
@@ -26,6 +27,14 @@
   -moz-box-shadow: 0 0 20px black;
   -webkit-box-shadow: 0 0 20px black;
   box-shadow: 0 0 20px black;
+}
+
+.logo {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: 125px;
+  z-index: 1;
 }
 
 .input-error {
